logs/old_logs/run_extensive_inpainting_5566290.err
#######################################################################################
### conda added to PATH. Use 'source activate' rather than 'conda activate'.        ###
### Do not run 'conda init' if prompted.                                            ###
### 'conda init' will modify your shell outside of the `module` environment         ###
#######################################################################################
Traceback (most recent call last):
  File "/home/merlinho/testspace/DDPM_Inpainting/src/run/run_extensive_inpainting.py", line 13, in <module>
    from src.model.diffusion import Diffusion
  File "/home/merlinho/testspace/DDPM_Inpainting/src/model/diffusion.py", line 11, in <module>
    class Diffusion:
  File "/home/merlinho/testspace/DDPM_Inpainting/src/model/diffusion.py", line 96, in Diffusion
    train_loader=cfg.train_loader,
  File "/home/merlinho/testspace/DDPM_Inpainting/src/config.py", line 198, in train_loader
    from src.data.loader import get_loader
  File "/home/merlinho/testspace/DDPM_Inpainting/src/data/loader.py", line 3, in <module>
    from src.data.read_data import read_data
  File "/home/merlinho/testspace/DDPM_Inpainting/src/data/read_data.py", line 9, in <module>
    from src.data.precipitation_patch_diffusion_dataset import PrecipitationPatchDiffusionDataset
  File "/home/merlinho/testspace/DDPM_Inpainting/src/data/precipitation_patch_diffusion_dataset.py", line 69
    if self.patches            self.data = torch.cat(self.patches, dim=0)
                               ^^^^
SyntaxError: invalid syntax
